# python-rest-api-example

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml  linters.yml  test.yml
alembic/: env.py
alembic/versions/: 35ada35bc404_create_user_table.py
api/: users_api.py
app/: db.py  main.py
app/adapters/database/: database.py
app/adapters/database/users/: in_memory_user_repository.py  model.py  sql_user_repository.py  unit_of_work.py
app/adapters/http/: __init__.py
app/adapters/http/auth/: authentication_controller.py  authenticator.py  jwt_authenticator.py  jwt_user_signer.py
app/adapters/http/auth/exceptions/: authentication_exception.py
app/adapters/http/auth/output/: token.py
app/adapters/http/dependencies/: dependencies.py
app/adapters/http/health/: health_controller.py
app/adapters/http/health/output/: health_status_response.py
app/adapters/http/users/: exceptions_handler.py  users_api.py  users_authentication_controller.py  users_controller.py
app/adapters/http/users/input/: user.py
app/adapters/http/users/output/: user.py
app/api/: users_api.py
app/api/models/: user.py
app/conf/: config.py  logging.conf
app/dependencies/: dependencies.py
app/domain/users/auth/: bycryp_password_encoder.py  password_encoder.py
app/domain/users/command/: user_create_command.py  user_credentials_command.py  user_update_status_command.py
app/domain/users/model/: user.py  user_exceptions.py  user_id.py  user_status.py
app/domain/users/query/: user_query.py
app/domain/users/repository/: unit_of_work.py  user_repository.py
app/domain/users/usecases/: user_authentication_usecases.py  user_usecases.py
app/services/: users_service.py
docker/: entrypoint.sh
entities/: user.py
heroku/: heroku-entrypoint.sh
heroku/datadog-config/: datadog.yml
migrations/versions/: 35ada35bc404_create_user_table.py
services/: users_service.py
tests/: test_app.py
tests/adapters/database/users/: test_in_memory_user_repository.py  test_sql_user_repository.py
tests/adapters/http/: bootstrap_app.py
tests/adapters/http/auth/: test_jwt_authenticator.py  test_jwt_user_signer.py
tests/adapters/http/health/: test_health_api.py
tests/adapters/http/users/: test_user_api.py
tests/conf/: config.py
tests/domain/users/: test_user.py
tests/domain/users/model/: test_user.py
tests/domain/users/usecases/: test_user_authentication_usecases.py  test_user_usecases.py
tests/services/: test_users_services.py
