[tool.poetry]
name = "python-rest-api-example"
version = "0.1.0"
description = "Basic proyect with python3, FastAPI and Poetry"
authors = ["Agustin Rojas <rojasagustin90@gmail.com>"]
packages = [
    { include = "app" },
    { include = "app/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.8.1"}
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
requests = "^2.25.1"
peewee = "^3.14.4"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-dotenv = "^1.0.0"
SQLAlchemy = "^1.3.23"
uuid = "^1.30"
alembic = "^1.6.5"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.6"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov"]


[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true